# rubik-playground

./: .gitignore  Cargo.toml  LICENSE  README.md  test_orientation.rs
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: core_benches.rs
crates/cube-cli/: Cargo.toml
crates/cube-cli/src/: main.rs
crates/cube-core/: Cargo.toml
crates/cube-core/src/: cube.rs  group.rs  lib.rs  moves.rs
crates/cube-wasm/: Cargo.toml
crates/cube-wasm/src/: lib.rs
cube-cli/src/: main.rs
cube-core/src/: alg.rs  cycles.rs  legality.rs  lib.rs  moves.rs  state.rs
cube-wasm/: Cargo.toml  README.md  build.sh  index.html  style.css
cube-wasm/src/: lib.rs
docs/: README.md  cube-app.js  index.html
docs/pkg/: cube_wasm.d.ts  cube_wasm.js  cube_wasm_bg.wasm  cube_wasm_bg.wasm.d.ts  package.json
examples/: basic_usage.rs
scripts/: setup_trunk.sh
tests/: core_integration.rs
