[workspace]
members = [
  "cube-core",
  "cube-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
description = "A modular Rust + WebAssembly playground for exploring Rubik's Cube operations, group theory, and algorithmic logic."
authors = ["ut-tomo"]
repository = "https://github.com/ut-tomo/rubik-playground"

[workspace.dependencies]
# 共通の依存関係
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# ワークスペースルートでのexamples/tests/benchesの定義
[package]
name = "rubik-playground"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cube-core = { path = "cube-core" }

[[test]]
name = "core_integration"
path = "tests/core_integration.rs"
