[package]
name = "cube-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for Rubik's Cube operations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cube-core = { path = "../cube-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
